@@ -1,3 +1,6 @@
+2009-08-20 Added scaled dict to AutoDateFormatter for customized
+           scales - JDH
+
 2009-08-15 Pyplot interface: the current image is now tracked at the
            figure and axes level, addressing tracker item 1656374. - EF
 
